--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,4 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">AndroidPortScanner</string>
+    <string name="app_name">Android Port Scanner</string>
+		<string name="host_name">Host Name or IP: </string>
+		<string name="port_range">Port Range: (456,67,7500-7510) </string>
+		<string name="end_port">End Port: </string>
+		<string name="scan_label">Scan</string>
+		<string name="stop_label">Stop</string>
+		<string name="host_name_hint">www.mysite.com</string>
+		<string name="ip_address_hint">192.168.106.105</string>
 </resources>
