--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Android Port Scanner</string>
+    <string name="app1_name">Android Port Scanner</string>
+		<string name="app2_name">Android IP Information</string>
 		<string name="host_name">Host Name or IP: </string>
 		<string name="port_range">Port Range: (456,67,7500-7510) </string>
 		<string name="end_port">End Port: </string>
@@ -12,4 +13,14 @@
 		<string name="zero_hint">0</string>
 		
 		<string name="ihl_label">IHL</string>
+		<string name="version_label">Version</string>
+		<string name="tos_label">TOS</string>
+		<string name="ttl_label">TTL</string>
+		<string name="protocol_label">Protocol</string>
+		<string name="tot_len_label">Total Length</string>
+		<string name="id_label">Identification</string>
+		<string name="frag_label">Fragmentation</string>
+		<string name="check_label">Check</string>
+		<string name="saddr_label">Send Address</string>
+		<string name="daddr_label">Destination Address</string>
 </resources>
